<resources>
    <string name="app_name">ANTAssistant</string>

    <string name="notification_channel_main_id">Main</string>
    <string name="notification_channel_main_name">Основной</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="s_auth_login_hint">Логин</string>
    <string name="s_auth_password_hint">Пароль</string>
    <string name="s_auth_confirm_hint">Войти</string>
    <string name="s_auth_error_text">Неверный логин и/или пароль</string>
    <string name="s_auth_phone_text">Звонок в службу поддержки\n+7 (495) 940–92–11</string>

    <string name="s_main_copy_message">Скопировано в буфер обмена</string>
    <string name="s_main_logout_message">Вы действительно хотите выйти?</string>
    <string name="s_main_logout">Выйти</string>

    <plurals name="notification_internet_out_message">
        <item quantity="zero">Интернет отключат сегодня</item>
        <item quantity="one">Интернет отключат через %1$d день</item>
        <item quantity="two">Интернет отключат через %1$d дня</item>
        <item quantity="few">Интернет отключат через %1$d дня</item>
        <item quantity="many">Интернет отключат через %1$d дней</item>
        <item quantity="other">Интернет отключат через %1$d дней</item>
    </plurals>
</resources>
