<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assistant.ant.solidlsnake.antassistant.presentation.ui.AuthActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:srcCompat="@drawable/background" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_weight="1" />

    <android.support.v7.widget.CardView
        android:id="@+id/auth_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#3949ab"
                android:textSize="30sp"
                tools:targetApi="jelly_bean" />

            <LinearLayout
                android:id="@+id/auth_data_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s_auth_login_hint"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s_auth_password_hint"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/auth_data_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableRight="@drawable/ic_phone"
                android:drawablePadding="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:text="@string/s_auth_phone_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/et_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_phone"
                android:gravity="center"
                android:text="@string/s_auth_error_text"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/s_auth_confirm_hint"
        app:backgroundTint="#3949ab"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_container"
        app:layout_constraintEnd_toEndOf="@+id/auth_container"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/auth_container"
        app:layout_constraintTop_toBottomOf="@+id/auth_container"
        app:rippleColor="#aaaaaa"
        tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>
